--- a/assistant-freebox/configuration.json
+++ b/assistant-freebox/configuration.json
@@ -1,5 +1,5 @@
 {
-  "code_telecommande":"",
+  "code_telecommande":"6165842",
   "box_to_control":"hd1",
   "search_path":"/Disque dur/Vidéos/",
   "use_Mon_Bouquet":false
