--- a/assistant-freebox/configuration.json
+++ b/assistant-freebox/configuration.json
@@ -1,6 +1,6 @@
 {
+"search_path":"/Disque dur/Vidéos/",
   "code_telecommande":"",
+  "use_Mon_Bouquet":false,
   "box_to_control":"hd1",
-  "search_path":"/Disque dur/Vidéos/",
-  "use_Mon_Bouquet":false
 }
