--- a/package.json
+++ b/package.json
@@ -12,5 +12,12 @@
     "request-promise-native": "^1.0.5"
   },
   "author": "aymkdn",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-notify": "^0.4.5",
+    "grunt-replace": "^1.0.1"
+  }
 }
