--- a/assistant-freebox/configuration.json
+++ b/assistant-freebox/configuration.json
@@ -2,5 +2,5 @@
 "search_path":"/Disque dur/Vidéos/",
   "code_telecommande":"",
   "use_Mon_Bouquet":false,
-  "box_to_control":"hd1",
+  "box_to_control":"hd1"
 }
