--- a/assistant-sncf/package.json
+++ b/assistant-sncf/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assistant-tam",
+  "name": "assistant-sncf",
   "version": "1.0.0",
   "description": "Plugin SNCF pour un Assistant",
   "author": "rwahl",
