--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
   "name": "assistant-plugins",
-  "version": "1.0.0",
+  "version": "1.9.1",
   "description": "Permet de gérer des plugins avec les Assistants (via IFTTT et Pushbullet)",
   "main": "index.js",
+  "repository": "https://github.com/Aymkdn/assistant-plugins",
   "dependencies": {
-    "castv2-client": "^1.2.0",
-    "google-tts-api": "0.0.2",
     "promise": "^8.0.1",
     "pushbullet": "^2.1.0",
     "request": "^2.83.0",
-    "request-promise-native": "^1.0.5"
+    "request-promise-native": "^1.0.5",
+    "jsonfile": "^4.0.0"
   },
   "author": "aymkdn",
   "license": "MIT",
-  "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-notify": "^0.4.5",
-    "grunt-replace": "^1.0.1"
-  }
+  "devDependencies": {}
 }
