--- a/.github/no-response.yml
+++ b/.github/no-response.yml
@@ -3,7 +3,7 @@
 # Number of days of inactivity before an Issue is closed for lack of response
 daysUntilClose: 5
 # Label requiring a response
-responseRequiredLabel: more-information-needed
+responseRequiredLabel: attente-de-retour
 # Comment to post when closing an Issue for lack of response. Set to `false` to disable
 closeComment: >
   Cette *issue* a été automatiquement fermée car il n'y a eu aucune réponse complémentaire
